Fix code format (#3)